...
        app:layout_constraintEnd_toEndOf="@+id/imagenBaseFormulario"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="@+id/imagenBaseFormulario"
        app:layout_constraintTop_toBottomOf="@+id/editTextNombreUsuario" />

    <Button
        android:id="@+id/botonSignup"
        android:layout_width="105dp"
        android:layout_height="46dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/ic_button"
...
